<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">TicketMate</string>
    <string name="title_activity_registration">RegistrationActivity</string>
</resources>
